# Visual-Python

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  test.vpy
Graphs/: 1.vpy
src/visualpython/: __init__.py  __main__.py
src/visualpython/commands/: __init__.py  command.py  connection_commands.py  group_commands.py  layout_commands.py  node_commands.py  property_commands.py  undo_manager.py
src/visualpython/compiler/: __init__.py  ast_validator.py  code_generator.py  graph_validator.py  variable_scope.py
src/visualpython/core/: __init__.py  application.py  keybindings_manager.py
src/visualpython/dependencies/: __init__.py  dependency_scanner.py  dependency_store.py
src/visualpython/execution/: __init__.py  case.py  context.py  engine.py  error_report.py  output_capture.py  state_manager.py  type_inference.py  type_info.py  worker.py
src/visualpython/graph/: __init__.py  clipboard_manager.py  connection_widget.py  graph.py  scene.py  selection_manager.py  view.py
src/visualpython/layout/: __init__.py  base_layout.py  force_directed_layout.py  hierarchical_layout.py
src/visualpython/nodes/: __init__.py  registry.py
src/visualpython/nodes/controllers/: __init__.py
src/visualpython/nodes/models/: __init__.py  add_node.py  base_node.py  breakpoint_node.py  case_nodes.py  code_node.py  connection_model.py  data_aggregation_node.py  database_query_node.py  divide_node.py  end_node.py  file_read_node.py  file_write_node.py  for_loop_node.py  get_variable_node.py  http_request_node.py  if_node.py  input_node.py  json_parse_node.py  json_stringify_node.py  list_append_node.py  list_filter_node.py  list_map_node.py  list_reduce_node.py  merge_node.py  modulo_node.py  multiply_node.py  node_group.py  port.py  power_node.py  print_node.py  regex_match_node.py  regex_replace_node.py  set_variable_node.py  start_node.py  string_concat_node.py  string_format_node.py  string_replace_node.py  string_split_node.py  subgraph_input_node.py  (+7 more)
src/visualpython/nodes/views/: __init__.py  code_node_widget.py  for_loop_widget.py  group_widget.py  if_node_widget.py  inline_value_widget.py  node_error_popup.py  (+5 more)
src/visualpython/serialization/: __init__.py  library_serializer.py  project_serializer.py  sqlite_variable_serializer.py  variable_serializer.py
src/visualpython/templates/: __init__.py  registry.py  template.py
src/visualpython/ui/: __init__.py  main_window.py
src/visualpython/utils/: logging.py
src/visualpython/variables/: __init__.py  global_store.py  sqlite_store.py  type_registry.py
tests/: conftest.py  test_execution.py  test_subgraph_execution.py  test_unsaved_changes_banner.py
(+32 files in other folders)
